# file_sync

./: Cargo.toml  README.md  doc.bat
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/file_sync/: all.html  enum.ClearFileError.html  enum.FileSyncError.html  index.html  sidebar-items.js  struct.FileSync.html
docs/proc_macro2/: enum.TokenTree.html  index.html  struct.Span.html  struct.TokenStream.html
docs/serde/: index.html  trait.Deserialize.html  trait.Serialize.html
docs/serde_json/: fn.from_reader.html  fn.from_slice.html  fn.from_str.html  index.html  struct.Deserializer.html  struct.Map.html  struct.Number.html  struct.StreamDeserializer.html
docs/syn/: enum.GenericArgument.html  enum.PathArguments.html  enum.ReturnType.html  enum.TraitBoundModifier.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_str.html  index.html  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.BareFnArg.html  struct.Binding.html  struct.BoundLifetimes.html  struct.ConstParam.html  struct.Constraint.html  struct.Error.html  struct.Generics.html  struct.Ident.html  struct.ImplGenerics.html  struct.LifetimeDef.html  struct.ParenthesizedGenericArguments.html  struct.Path.html  struct.PathSegment.html  struct.PredicateEq.html  struct.PredicateLifetime.html  struct.PredicateType.html  struct.TraitBound.html  struct.Turbofish.html  struct.TypeArray.html  struct.TypeBareFn.html  struct.TypeGenerics.html  struct.TypeGroup.html  struct.TypeImplTrait.html  struct.TypeInfer.html  (+12 more)
src/: lib.rs
(+170 files in other folders)
